[package]
name = "sourmash"
version = "0.3.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/luizirber/sourmash-rust"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"
edition = "2018"

[lib]
name = "sourmash"
crate-type = ["cdylib", "rlib"]
bench = false

[profile.release]
lto=true

[features]
from-finch = ["finch", "needletail"]

[workspace]

#[build-dependencies]
#cbindgen = "~0.6.7"

[dependencies]
byteorder = "^1.2"
cfg-if = "0.1"
clap = { version = "~2.32", features = ["yaml"] }
env_logger = "0.6.0"
exitfailure = "0.5.1"
failure = "0.1.3"
failure_derive = "0.1.3"
finch = { version = "~0.1.6", optional = true }
fixedbitset = "^0.1.9"
human-panic = "1.0.1"
lazy_static = "1.0.0"
lazy-init = "0.3.0"
log = "0.4.0"
md5 = "0.6.0"
murmurhash3 = "~0.0.5"
needletail = { version = "~0.2.1", optional = true }
serde = "1.0"
serde_derive = "~1.0.58"
serde_json = "1.0.2"
ukhs = { git = "https://github.com/luizirber/ukhs", branch = "feature/alternative_backends", features = ["boomphf_mphf"], default-features = false}
bio = { git = "https://github.com/luizirber/rust-bio", branch = "feature/fastx_reader" }
primal = "0.2.3"
pdatastructs = { git = "https://github.com/luizirber/pdatastructs.rs", branch = "succinct_wasm" }
itertools = "0.8.0"
typed-builder = "0.3.0"
csv = "1.0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ocf]
version = "0.1"
path = "ocf"
default-features = false
features = ["bz2"]

[dev-dependencies]
proptest = "^0.8"
criterion = "^0.2"
rand = "^0.5"
tempfile = "3"
assert_matches = "1.2"

[[bench]]
name = "index"
harness = false
