[build-system]
requires = [
    "setuptools >= 61",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "milksnake",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = "sourmash"
description = "tools for comparing DNA sequences with MinHash sketches"
readme = "README.md"

authors = [
  { name="Luiz Irber", email="luiz@sourmash.bio", orcid="0000-0003-4371-9659" },
  { name="Mohamed Abuelanin", email="mabuelanin@gmail.com", orcid="0000-0002-3419-4785" },
  { name="Harriet Alexander", email="harriet.xander@gmail.com", orcid="0000-0003-1308-8008" },
  { name="Abhishek Anant", orcid="0000-0002-5751-2010" },
  { name="Keya Barve", email="krbarve@ucdavis.edu", orcid="0000-0003-3241-2117" },
  { name="Colton Baumler", email="ccbaumler@ucdavis.edu" },
  { name="Olga Botvinnik", email="olga.botvinnik@gmail.com", orcid="0000-0003-4412-7970" },
  { name="Phillip Brooks", email="ptbrooks@ucdavis.edu", orcid="0000-0003-3987-244X" },
  { name="Peter Cock", email="p.j.a.cock@gmail.com", orcid="0000-0001-9513-9993" },
  { name="Daniel Dsouza", email="ddsouza@umich.edu" },
  { name="Laurent Gautier", email="lgautier@gmail.com", orcid="0000-0003-0638-3391" },
  { name="Tim Head", email="betatim@gmail.com", orcid="0000-0003-0931-3698" },
  { name="Mahmudur Rahman Hera", email="mbr5797@psu.edu", orcid="0000-0002-5992-9012" },
  { name="Hannah Eve Houts", email="hehouts@ucdavis.edu", orcid="0000-0002-7954-4793" },
  { name="Lisa K. Johnson", email="ljcohen@ucdavis.edu", orcid="0000-0002-3600-7218" },
  { name="Fabian Klötzl", email="kloetzl@evolbio.mpg.de", orcid="0000-0002-6930-0592" },
  { name="David Koslicki", email="dmk333@psu.edu", orcid="0000-0002-0640-954X" },
  { name="Katrin Leinweber", email="katrin.leinweber@tib.eu", orcid="0000-0001-5135-5758" },
  { name="Marisa Lim", email="marisa_lim@pacbell.net", orcid="0000-0003-2097-8818" },
  { name="Ricky Lim", email="rlim.email@gmail.com", orcid="0000-0003-1313-7076" },
  { name="Ivan Ogasawara", email="ivan.ogasawara@gmail.com" },
  { name="N. Tessa Pierce", email="ntpierce@gmail.com", orcid="0000-0002-2942-5331" },
  { name="Taylor Reiter", email="taylorreiter@gmail.com", orcid="0000-0002-7388-421X" },
  { name="Camille Scott", email="camille.scott.w@gmail.com", orcid="0000-0001-8822-8779" },
  { name="Andreas Sjödin", email="andreas.sjodin@gmail.com", orcid="0000-0001-5350-4219" },
  { name="Connor T. Skennerton", email="c.skennerton@gmail.com", orcid="0000-0003-1320-4873" },
  { name="Jason Stajich", email="jason.stajich@ucr.edu", orcid="0000-0002-7591-0020" },
  { name="Daniel Standage", email="daniel.standage@nbacc.dhs.gov", orcid="0000-0003-0342-8531" },
  { name="S. Joshua Swamidass", email="swamidass@gmail.com", orcid="0000-0003-2191-0778" },
  { name="Connor Tiffany", email="crtiffany@ucdavis.edu", orcid="0000-0001-8188-7720" },
  { name="Pranathi Vemuri", email="pranathi93.vemuri@gmail.com", orcid="0000-0002-5748-9594"},
  { name="Erik Young", email="young.erik9@gmail.com" },
  { name="Nick", email="NapsterInBlue@gmail.com" },
  { name="C. Titus Brown", email="titus@idyll.org", orcid="0000-0001-6001-2677" },
]

maintainers = [
  { name="Luiz Irber", email="luiz@sourmash.bio", orcid="0000-0003-4371-9659" },
  { name="C. Titus Brown", email="titus@idyll.org", orcid="0000-0001-6001-2677" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "screed>=1.0.5",
  "cffi>=1.14.0",
  "numpy",
  "matplotlib",
  "scipy",
  "deprecation>=2.0.6",
  "cachetools>=4,<6",
  "bitstring>=3.1.9,<4",
]

requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
"Documentation" = "https://sourmash.readthedocs.io"
"CI" = "https://github.com/dib-lab/sourmash/actions"
"Source" = "https://github.com/dib-lab/sourmash"
"Tracker" = "https://github.com/dib-lab/sourmash/issues"

[project.scripts]
"sourmash" = "sourmash.__main__:main"

[project.optional-dependencies]
test = [
  "pytest>=6.2.4,<7.2.0",
  "pytest-cov>=2.12,<4.0",
  "pyyaml",
  "recommonmark",
  "hypothesis",
]
demo = [
  "jupyter",
  "jupyter_client",
  "ipython",
]
doc = [
  "sphinx>=4.4.0,<6",
  "myst-parser==0.18.0",
  "Jinja2==3.1.2",
  "alabaster",
  "sphinxcontrib-napoleon",
  "nbsphinx",
  "ipython",
  "docutils>=0.17.1,<0.19.0",
]
storage = [
  "ipfshttpclient>=0.4.13",
  "redis",
]
# hmm, I think this is a hack, but it works...
# https://github.com/pypa/pip/issues/10393#issuecomment-941885429
all = ["sourmash[test,demo,doc,storage]"]

[tool.setuptools]
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sourmash.version.version"}

[tool.setuptools_scm]
write_to = "src/sourmash/version.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"

[tool.isort]
known_third_party = ["deprecation", "hypothesis", "mmh3", "numpy", "pkg_resources", "pytest", "screed", "setuptools", "sourmash_tst_utils"]
multi_line_output = 3 
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["sourmash"]

[tool.cibuildwheel]
build = "cp39-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_ppc64le *-musllinux_s390x"
before-build = "source .ci/install_cargo.sh"
environment = { PATH="$HOME/.cargo/bin:$PATH" }
build-verbosity = 3

[tool.pytest.ini_options]
addopts = "--doctest-glob='doc/*.md'"
norecursedirs = [
  "utils",
  "build",
  "buildenv",
  ".tox",
  ".asv",
  ".eggs",
]
testpaths = [
  "tests",
  "doc",
]
