[metadata]
name = sourmash
description = tools for comparing DNA sequences with MinHash sketches
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dib-lab/sourmash
author = Luiz Irber, Harriet Alexander, Olga Botvinnik, Phillip Brooks, Laurent Gautier, Tim Head, Lisa K. Johnson, Fabian Klötzl, Katrin Leinweber, Ivan Ogasawara, N. Tessa Pierce, Taylor Reiter, Andreas Sjödin, Connor T. Skennerton, Daniel Standage, S. Joshua Swamidass, Connor Tiffany, Erik Young, C. Titus Brown
author_email = titus@idyll.org
maintainer = Luiz Irber, C. Titus Brown
maintainer_email = lcirberjr@ucdavis.edu, titus@idyll.org
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Rust
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls = 
    Documentation = https://sourmash.readthedocs.io
    CI = https://github.com/dib-lab/sourmash/actions
    Source = https://github.com/dib-lab/sourmash
    Tracker = https://github.com/dib-lab/sourmash/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    screed>=1.0.5
    cffi>=1.14.0
    numpy
    matplotlib
    scipy
    deprecation>=2.0.6
    cachetools>=4,<6
python_requires = >=3.8

[bdist_wheel]
universal = 1

[options.packages.find]
where = src

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future
[options.extras_require]
test =
    pytest>=6.2.4,<7.2.0
    pytest-cov>=2.12,<4.0
    recommonmark
    hypothesis
demo =
    jupyter
    jupyter_client
    ipython
doc =
    sphinx>=4.4.0,<5
    myst-parser==0.17.0
    Jinja2==3.1.1
    alabaster
    sphinxcontrib-napoleon
    nbsphinx
    ipython
    docutils>=0.17.1,<0.19.0
storage =
    ipfshttpclient>=0.4.13
    redis
all = 
    %(test)s
    %(demo)s
    %(doc)s
    %(storage)s

[options.entry_points]
console_scripts =
    sourmash = sourmash.__main__:main

[tool:pytest]
addopts =
    --doctest-glob='doc/*.md'
norecursedirs =
    utils
    build
    buildenv
    .tox
    .asv
    .eggs
testpaths =
    tests
    doc
