[package]
name = "ocf"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

[features]
default = ["bzip2", "xz2"]
bz2 = ["bzip2"]
lzma = ["xz2"]

[dependencies]
bzip2 = { version = "0.3.3", optional = true }
cfg-if = "0.1"
failure = "0.1.3"
flate2 = "1.0"
enum_primitive = "0.1.1"
xz2 = { version = "0.1", optional = true }
