[package]
name = "smrs"
version = "0.3.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/dib-lab/sourmash"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
cfg-if = "0.1.10"
clap = { version = "2.33.0", features = ["yaml"] }
env_logger = "0.7.1"
exitfailure = "0.5.1"
failure = "0.1.6"
failure_derive = "0.1.6"
fixedbitset = "0.2.0"
lazy_static = "1.4.0"
lazy-init = "0.3.0"
log = "0.4.8"
md5 = "0.7.0"
murmurhash3 = "0.0.5"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
primal = "0.2.3"
typed-builder = "0.4.0"
csv = "1.1.1"
sourmash = { path = "../sourmash/" }

[target.'cfg(all(target_arch = "wasm32", target_vendor="unknown"))'.dependencies.wasm-bindgen]
version = "0.2.55"
features = ["serde-serialize"]

[target.'cfg(not(all(target_arch = "wasm32", target_vendor="unknown")))'.dependencies.niffler]
version = "1.0"
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "0.9.4"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.7.2"
tempfile = "3.1.0"
assert_matches = "1.3.0"
assert_cmd = "0.12.0"
predicates = "1.0.2"
