[package]
name = "sourmash"
version = "0.11.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/sourmash-bio/sourmash"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
autoexamples = false
autobins = false
rust-version = "1.64.0"

[lib]
name = "sourmash"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
from-finch = ["finch"]
parallel = ["rayon"]
maturin = []

[dependencies]
az = "1.0.0"
bytecount = "0.6.0"
byteorder = "1.4.3"
cfg-if = "1.0"
counter = "0.5.7"
finch = { version = "0.6.0", optional = true }
fixedbitset = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1.1"
log = "0.4.20"
md5 = "0.7.0"
murmurhash3 = "0.0.5"
niffler = { version = "2.3.1", default-features = false, features = [ "gz" ] }
nohash-hasher = "0.2.0"
num-iter = "0.1.43"
once_cell = "1.18.0"
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.104"
primal-check = "0.3.1"
thiserror = "1.0"
typed-builder = "0.14.0"
twox-hash = "1.6.0"
vec-collections = "0.3.4"
piz = "0.5.0"
memmap2 = "0.7.1"
ouroboros = "0.17.2"

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.5.1"
needletail = { version = "0.5.1", default-features = false }
proptest = { version = "1.2.0", default-features = false, features = ["std"]}
rand = "0.8.2"
tempfile = "3.7.1"

[[bench]]
name = "index"
harness = false

[[bench]]
name = "compute"
harness = false

[[bench]]
name = "nodegraph"
harness = false

[[bench]]
name = "minhash"
harness = false

## Wasm section. Crates only used for WASM, as well as specific configurations

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dependencies.web-sys]
version = "0.3.64"
features = ["console", "File"]

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.chrono]
version = "0.4.26"
features = ["wasmbind"]

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

### These crates don't compile on wasm
[target.'cfg(not(all(target_arch = "wasm32", target_os="unknown")))'.dependencies]
