[package]
name = "sourmash"
version = "0.12.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "MinHash sketches for genomic data"
repository = "https://github.com/sourmash-bio/sourmash"
keywords = ["minhash", "bioinformatics"]
categories = ["science", "algorithms", "data-structures"]
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
autoexamples = false
autobins = false
rust-version = "1.64.0"

[lib]
name = "sourmash"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[features]
from-finch = ["finch"]
parallel = ["rayon"]
maturin = []
branchwater = ["rocksdb", "rkyv", "parallel"]
default = []

[dependencies]
az = "1.0.0"
bytecount = "0.6.4"
byteorder = "1.5.0"
camino = { version = "1.1.6", features = ["serde1"] }
cfg-if = "1.0"
counter = "0.5.7"
csv = "1.1.6"
enum_dispatch = "0.3.12"
finch = { version = "0.6.0", optional = true }
fixedbitset = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1.1"
histogram = "0.6.9"
log = "0.4.20"
md5 = "0.7.0"
memmap2 = "0.9.0"
murmurhash3 = "0.0.5"
niffler = { version = "2.3.1", default-features = false, features = [ "gz" ] }
nohash-hasher = "0.2.0"
num-iter = "0.1.43"
once_cell = "1.18.0"
ouroboros = "0.18.0"
piz = "0.5.0"
primal-check = "0.3.1"
rkyv = { version = "0.7.39", optional = true }
roaring = "0.10.0"
rayon = { version = "1.8.0", optional = true }
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0"
twox-hash = "1.6.0"
typed-builder = "0.14.0"
vec-collections = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"
needletail = { version = "0.5.1", default-features = false }
proptest = { version = "1.3.1", default-features = false, features = ["std"]}
rand = "0.8.2"
tempfile = "3.7.1"

[[bench]]
name = "compute"
harness = false

[[bench]]
name = "nodegraph"
harness = false

[[bench]]
name = "minhash"
harness = false

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = ["maturin"]
skip_feature_sets = [
    ["branchwater", "parallel"], # branchwater implies parallel
]

## Wasm section. Crates only used for WASM, as well as specific configurations

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dependencies.wasm-bindgen]
version = "0.2.87"
features = ["serde-serialize"]

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dependencies.web-sys]
version = "0.3.64"
features = ["console", "File"]

[target.'cfg(all(target_arch = "wasm32"))'.dependencies.chrono]
version = "0.4.28"
features = ["wasmbind"]

[target.'cfg(all(target_arch = "wasm32", target_os="unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

### These crates don't compile on wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.21.0", optional = true }
